Update Matrix derivatives & Trace tricks.ipynb

--- a/Fundamental mathematics/Matrix derivatives & Trace tricks.ipynb
+++ b/Fundamental mathematics/Matrix derivatives & Trace tricks.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<big>For scalar function $L$ and matrix $X$ with size of $n \\times m$"
+    "<big><big>For scalar function $L$ and matrix $X$ with size of $n \\times m$"
    ]
   },
   {
